<resources>
    <string name="app_name">Doodle</string>
    <string name="signup_title">Sign Up</string>
    <string name="hint_user_name">User Name</string>
    <string name="hint_enter_email">Enter Email</string>
    <string name="hint_create_password">Create Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="already_have_account">Already Have Account? </string>
    <string name="login">Login</string>
    <string name="login_title">Log In</string>
    <string name="login_subtitle">Welcome back, you\'ve been missed!</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_registered">Not Registered ? </string>
    <string name="create_account">Create Account</string>
    <string name="logo_description">Doodle Logo</string>
    <string name="dev_info_title">Developer Info</string>
    <string name="dev_name">Piyumal Sandaruwan</string>
    <string name="dev_bio">Android Developer passionate about building clean and functional apps.</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="user_profile">User Profile</string>
    <string name="sign_out">Sign Out</string>
</resources>